fix: changed text spacing depending on picture

--- a/theme/ItaliaTheme/Components/_card.scss
+++ b/theme/ItaliaTheme/Components/_card.scss
@@ -67,7 +67,9 @@
       @include rem-size(font-size, 18);
       @include rem-size(line-height, 24);
       font-family: 'Titillium Web' !important;
-      width: 60%;
+      &.card-with-picture {
+        width: 60%;
+      }
     }
   }
 }
